examples/napi/tests/build_error_tests/reference_family_thread_safety.stderr
error[E0277]: `*mut u32` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:6:17
  |
6 |   assert_sync::<Reference<u32>>();
  |                 ^^^^^^^^^^^^^^ `*mut u32` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_prelude::Reference<u32>`, the trait `Sync` is not implemented for `*mut u32`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut napi_ref__` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:6:17
  |
6 |   assert_sync::<Reference<u32>>();
  |                 ^^^^^^^^^^^^^^ `*mut napi_ref__` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_prelude::Reference<u32>`, the trait `Sync` is not implemented for `*mut napi_ref__`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut napi_env__` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:6:17
  |
6 |   assert_sync::<Reference<u32>>();
  |                 ^^^^^^^^^^^^^^ `*mut napi_env__` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_prelude::Reference<u32>`, the trait `Sync` is not implemented for `*mut napi_env__`
note: required because it appears within the type `napi::bindgen_runtime::js_values::NapiValueOwner`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values.rs
  |
  | pub(crate) struct NapiValueOwner {
  |                   ^^^^^^^^^^^^^^
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:6:17
  |
6 |   assert_sync::<Reference<u32>>();
  |                 ^^^^^^^^^^^^^^ `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`, the trait `Sync` is not implemented for `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it appears within the type `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub(crate) struct FinalizeCallbacks {
  |                   ^^^^^^^^^^^^^^^^^
  = note: required for `Arc<napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks>` to implement `Sync`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `(dyn FnMut() + 'static)` cannot be sent between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:6:17
  |
6 |   assert_sync::<Reference<u32>>();
  |                 ^^^^^^^^^^^^^^ `(dyn FnMut() + 'static)` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `(dyn FnMut() + 'static)`
  = note: required for `std::ptr::Unique<(dyn FnMut() + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn FnMut() + 'static)>`
 --> $RUST/alloc/src/boxed.rs
  |
  | pub struct Box<
  |            ^^^
note: required because it appears within the type `PhantomData<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
  = note: required for `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` to implement `Send`
note: required because it appears within the type `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub(crate) struct FinalizeCallbacks {
  |                   ^^^^^^^^^^^^^^^^^
  = note: required for `Arc<napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks>` to implement `Sync`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut u32` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:7:17
  |
7 |   assert_sync::<SharedReference<u32, u32>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut u32` cannot be shared between threads safely
  |
  = help: within `SharedReference<u32, u32>`, the trait `Sync` is not implemented for `*mut u32`
note: required because it appears within the type `SharedReference<u32, u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct SharedReference<T: 'static, S: 'static> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut napi_ref__` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:7:17
  |
7 |   assert_sync::<SharedReference<u32, u32>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut napi_ref__` cannot be shared between threads safely
  |
  = help: within `SharedReference<u32, u32>`, the trait `Sync` is not implemented for `*mut napi_ref__`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required because it appears within the type `SharedReference<u32, u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct SharedReference<T: 'static, S: 'static> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut napi_env__` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:7:17
  |
7 |   assert_sync::<SharedReference<u32, u32>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut napi_env__` cannot be shared between threads safely
  |
  = help: within `SharedReference<u32, u32>`, the trait `Sync` is not implemented for `*mut napi_env__`
note: required because it appears within the type `napi::bindgen_runtime::js_values::NapiValueOwner`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values.rs
  |
  | pub(crate) struct NapiValueOwner {
  |                   ^^^^^^^^^^^^^^
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required because it appears within the type `SharedReference<u32, u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct SharedReference<T: 'static, S: 'static> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` cannot be shared between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:7:17
  |
7 |   assert_sync::<SharedReference<u32, u32>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`, the trait `Sync` is not implemented for `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it appears within the type `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub(crate) struct FinalizeCallbacks {
  |                   ^^^^^^^^^^^^^^^^^
  = note: required for `Arc<napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks>` to implement `Sync`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required because it appears within the type `SharedReference<u32, u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct SharedReference<T: 'static, S: 'static> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `(dyn FnMut() + 'static)` cannot be sent between threads safely
 --> tests/build_error_tests/reference_family_thread_safety.rs:7:17
  |
7 |   assert_sync::<SharedReference<u32, u32>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn FnMut() + 'static)` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `(dyn FnMut() + 'static)`
  = note: required for `std::ptr::Unique<(dyn FnMut() + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn FnMut() + 'static)>`
 --> $RUST/alloc/src/boxed.rs
  |
  | pub struct Box<
  |            ^^^
note: required because it appears within the type `PhantomData<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<Box<(dyn FnMut() + 'static)>>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
  = note: required for `RefCell<Vec<Box<(dyn FnMut() + 'static)>>>` to implement `Send`
note: required because it appears within the type `napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub(crate) struct FinalizeCallbacks {
  |                   ^^^^^^^^^^^^^^^^^
  = note: required for `Arc<napi::bindgen_runtime::js_values::value_ref::FinalizeCallbacks>` to implement `Sync`
note: required because it appears within the type `napi::bindgen_prelude::Reference<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct Reference<T> {
  |            ^^^^^^^^^
note: required because it appears within the type `SharedReference<u32, u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/value_ref.rs
  |
  | pub struct SharedReference<T: 'static, S: 'static> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/reference_family_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`
